--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -219,13 +219,13 @@
                                 </div>
                                 카테고리
                             </div>
-                            <div class="category-wrapper category-select">홈</div>
-                            <div class="category-wrapper">후원</div>
-                            <div class="category-wrapper">펀딩</div>
-                            <div class="category-wrapper">커뮤니티</div>
-                            <div class="category-wrapper">캘린더</div>
-                            <div class="category-wrapper">복지센터</div>
-                            <div class="category-wrapper">심봉사소개</div>
+                            <a href="/main"><div class="category-wrapper category-select">홈</div></a>
+                            <a href="/support/support-list"><div class="category-wrapper">후원</div></a>
+                            <a href=""><div class="category-wrapper">펀딩</div></a>
+                            <a href="/community/free-board/new"><div class="category-wrapper">커뮤니티</div></a>
+                            <a href=""><div class="category-wrapper">캘린더</div></a>
+                            <a href=""><div class="category-wrapper">복지센터</div></a>
+                            <a href=""><div class="category-wrapper">심봉사소개</div></a>
                         </div>
 
                     </div>
