--- a/src/main/resources/templates/admin/volunteer.html
+++ b/src/main/resources/templates/admin/volunteer.html
@@ -240,66 +240,65 @@
     <section class="modal-stage" style="display: none">
         <section class="modal">
             <div class="modal__header">
-                <h3 class="modal__title">봉사 상세보기</h3>
+                <h3 class="modal__title">봉사 등록</h3>
                 <a class="modal-close">
                     <svg xmlns="http://www.w3.org/2000/svg" data-name="Capa 1" id="Capa_1" viewBox="0 0 20 19.84">
                         <path d="M10.17,10l3.89-3.89a.37.37,0,1,0-.53-.53L9.64,9.43,5.75,5.54a.37.37,0,1,0-.53.53L9.11,10,5.22,13.85a.37.37,0,0,0,0,.53.34.34,0,0,0,.26.11.36.36,0,0,0,.27-.11l3.89-3.89,3.89,3.89a.34.34,0,0,0,.26.11.35.35,0,0,0,.27-.11.37.37,0,0,0,0-.53Z"/>
                     </svg>
                 </a>
             </div>
-            <form class="storage_form" action="">
+            <form class="storage_form" th:action="@{/admin/volunteer-work-regist}" name="registForm" method="post">
                 <main class="modal__main">
                     <div class="modal__profile__top">
                         <h4>봉사 정보</h4>
                         <div class="user__profile">
                             <h5>게시글 제목</h5>
                             <div class="user__profile__input">
-                                <input type="text" name="" value="서울시 연탄 봉사활동 모집"/>
+                                <input type="text" name="volunteerWorkTitle" placeholder="서울시 연탄 봉사활동 모집"/>
                             </div>
                         </div>
                         <div class="user__profile">
                             <h5>봉사기간</h5>
                             <div class="user__profile__input">
-                                <input type="text" name="" value="2023-03-01"/>
-                                <input type="text" name="" value="2023-04-20"/>
+                                <input type="text" name="volunteerWorkStartDate" placeholder="2023-03-01"/>
+                                <input type="text" name="volunteerWorkEndDate" placeholder="2023-04-20"/>
                             </div>
                         </div>
                         <div class="user__profile">
                             <h5>봉시시간</h5>
                             <div class="user__profile__input">
-                                <input type="text" name="" value="12:00"/>~
-                                <input type="text" name="" value="17:00"/>
+                                <input type="text" name="volunteerWorkTime" placeholder="6"/>
                             </div>
                         </div>
                         <div class="user__profile">
                             <h5>모집기간</h5>
                             <div class="user__profile__input">
-                                <input type="text" name="" value="2023-02-01"/>
-                                <input type="text" name="" value="2023-02-25"/>
+                                <input type="text" name="volunteerWorkJoinStartDate" placeholder="2023-02-01"/>
+                                <input type="text" name="volunteerWorkJoinEndDate" placeholder="2023-02-25"/>
                             </div>
                         </div>
                         <div class="user__profile">
                             <h5>모집인원</h5>
                             <div class="user__profile__input">
-                                <input type="text" name="" value="30명"/>
+                                <input type="text" name="volunteerWorkRecruitNumber" value="30명"/>
                             </div>
                         </div>
                         <div class="user__profile">
                             <h5>봉사분야</h5>
                             <div class="user__profile__input">
-                                <input type="text" name="" value="다문화가정"/>
+                                <input type="text" name="volunteerWorkCategory" placeholder="다문화가정"/>
                             </div>
                         </div>
                         <div class="user__profile">
                             <h5>봉사장소</h5>
                             <div class="user__profile__input">
-                                <input type="text" name="" value="서울 복지센터"/>
+                                <input type="text" name="volunteerWorkPlace" value="서울 복지센터"/>
                             </div>
                         </div>
                         <div class="user__profile">
                             <h5>등록기관</h5>
                             <div class="user__profile__input">
-                                <input type="text" name="" value="서울 복지센터"/>
+                                <input type="text" name="volunteerWorkRegisterAgency" value="서울 복지센터"/>
                             </div>
                         </div>
                         <h4 style="margin-top: 20px;">이미지</h4>
@@ -363,14 +362,14 @@
                             <!--                    </label>-->
                         </div>
                         <div class="modal__profile__bottom">
-                            <h4>답변 작성</h4>
-                            <textarea cols="20" rows="10" placeholder="답변 내용 작성"></textarea>
+                            <h4>게시물 내용</h4>
+                            <textarea cols="20" rows="10" placeholder="게시물 내용 작성" name="volunteerWorkContent"></textarea>
                         </div>
                         <!--                <div class="notice__content">-->
                         <!--                  <textarea id="summernote" name="editordata"></textarea>-->
                         <!--                </div>-->
                         <div class="user__profile__button" style="margin-top: 20px;">
-                            <button id="completeBtn" class="button__type_2 button__color__green">
+                            <button id="submitBtn" class="button__type_2 button__color__green">
                                 작성완료
                             </button>
                         </div>
@@ -384,13 +383,8 @@
             <div class="modal__header">
                 <h3 class="modal__title">봉사 신청 명단</h3>
                 <a class="modal-close">
-                    <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            data-name="Capa 1"
-                            id="Capa_1"
-                            viewBox="0 0 20 19.84">
-                        <path
-                                d="M10.17,10l3.89-3.89a.37.37,0,1,0-.53-.53L9.64,9.43,5.75,5.54a.37.37,0,1,0-.53.53L9.11,10,5.22,13.85a.37.37,0,0,0,0,.53.34.34,0,0,0,.26.11.36.36,0,0,0,.27-.11l3.89-3.89,3.89,3.89a.34.34,0,0,0,.26.11.35.35,0,0,0,.27-.11.37.37,0,0,0,0-.53Z"/>
+                    <svg xmlns="http://www.w3.org/2000/svg" data-name="Capa 1" id="Capa_1" viewBox="0 0 20 19.84">
+                        <path d="M10.17,10l3.89-3.89a.37.37,0,1,0-.53-.53L9.64,9.43,5.75,5.54a.37.37,0,1,0-.53.53L9.11,10,5.22,13.85a.37.37,0,0,0,0,.53.34.34,0,0,0,.26.11.36.36,0,0,0,.27-.11l3.89-3.89,3.89,3.89a.34.34,0,0,0,.26.11.35.35,0,0,0,.27-.11.37.37,0,0,0,0-.53Z"/>
                     </svg>
                 </a>
             </div>
