--- a/src/main/resources/templates/service-info/service-info.html
+++ b/src/main/resources/templates/service-info/service-info.html
@@ -21,7 +21,7 @@
                 <div class="swiper-slide seventh-image" style="height: 937px; position: relative;">
                     <div class="bottom-content-wrap">
                         <div class="btn-wrapper">
-                            <a class="button-start" href="/templates/main/main.html">심봉사 시작하기</a>
+                            <a class="button-start" href="/main/main">심봉사 시작하기</a>
                         </div>
                     </div>
                 </div>
