--- a/src/main/resources/templates/join-login/email-login.html
+++ b/src/main/resources/templates/join-login/email-login.html
@@ -60,12 +60,12 @@
                         <div class="login-another-inner">
                             <span class="login-another-text">다른 방법으로 로그인</span>
                         </div>
-                        <button type="button" class="login-circle">
+                        <button onclick="location.href='/oauth2/authorization/kakao'" type="button" class="login-circle">
                             <div class="kakao-login-wrap">
                                 <svg width="34" height="34" viewBox="0 0 34 34" fill="none"><circle cx="17" cy="17" r="14.875" fill="#FEE500"></circle><path fill-rule="evenodd" clip-rule="evenodd" d="M17.0002 9.03125C12.0901 9.03125 8.146 12.0938 8.146 15.8415C8.30698 18.4205 9.91683 20.6369 12.2511 21.604L11.4059 24.6666C11.3657 24.7472 11.4059 24.8681 11.4864 24.908C11.5669 24.989 11.7279 24.989 11.8084 24.908L15.3903 22.5309C15.9135 22.6115 16.4367 22.6518 17.0002 22.6518C21.87 22.6518 25.8543 19.5892 25.8543 15.8415C25.8543 12.0938 21.9102 9.03125 17.0002 9.03125Z" fill="black" fill-opacity="0.9"></path></svg>
                             </div>
                         </button>
-                        <button class="login-circle">
+                        <button onclick="location.href='/oauth2/authorization/naver'" class="login-circle">
                             <div class="naver-login-wrap">
                                 <svg width="34" height="34" viewBox="0 0 34 34" fill="none"><g clip-path="url(#clip0_226_6574)"><path d="M17 31.875C8.81875 31.875 2.125 25.1812 2.125 17C2.125 8.81875 8.81875 2.125 17 2.125C25.1812 2.125 31.875 8.81875 31.875 17C31.875 25.1812 25.1812 31.875 17 31.875Z" fill="#03C75A"></path><path d="M18.9338 17.3825L14.9105 11.6167H11.5742V22.3834H15.0663V16.6175L19.0896 22.3834H22.4259V11.6167H18.9338V17.3825Z" fill="white"></path></g><defs><clipPath id="clip0_226_6574"><rect width="29.75" height="29.75" fill="white" transform="translate(2.125 2.125)"></rect></clipPath></defs></svg>
                             </div>
