--- a/src/main/resources/templates/admin/volunteer.html
+++ b/src/main/resources/templates/admin/volunteer.html
@@ -504,14 +504,14 @@
         });
 
     })
-    $detailButton.on('click', () => {
-        $('.modal-stage').show();
-        $('.volunteer-modal').fadeOut(500);
-
-        $('.modal-close').on('click', function () {
-            $('.modal-stage').fadeOut(500);
-        });
-
-    })
+    // $detailButton.on('click', () => {
+    //     $('.modal-stage').show();
+    //     $('.volunteer-modal').fadeOut(500);
+    //
+    //     $('.modal-close').on('click', function () {
+    //         $('.modal-stage').fadeOut(500);
+    //     });
+    //
+    // })
 </script>
 </html>
